--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
 # --------------------------------- 核心
+include(./Config.cmake)
 add_subdirectory(app)       #------ gui 依赖 vulkan-sdl-imgui
-add_subdirectory(util)
+add_subdirectory(appBase)
 
 # --------------------------------- 第三方库
 add_subdirectory(3rd)
