--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "xdwnd"]
-	path = xdwnd
+[submodule "appBase"]
+	path = appBase
 	url = https://gitee.com/xiaodouxd/xdwnd.git
+[submodule "3rd/glm"]
+	path = 3rd/glm
+	url = https://github.com/g-truc/glm.git
