--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,18 +4,15 @@ project(app)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
-include(../Config.cmake)
-add_subdirectory(rc)
 file(GLOB_RECURSE ALL_SOURCE "src/*.cpp" "src/*.c" "src/*.h" "src/*.hpp" "../3rd/rapidxml/*.hpp")
 
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 include_directories(${PROJECT_NAME} ./src ./src/base ../3rd/rapidxml ../3rd/stb)
 add_executable(${PROJECT_NAME} ${ALL_SOURCE})
 if(WIN32)
-    file(GLOB_RECURSE ALL_RC "rc/gen/rc/*.rc")
+    file(GLOB_RECURSE ALL_RC "../appBase/core/rc/gen/rc/*.rc")
     target_sources(${PROJECT_NAME} PRIVATE ${ALL_RC})
 endif(WIN32)
-
 
 # 控制台仅在 Debug 模式下生成
 if (${CMAKE_BUILD_TYPE} MATCHES ".*(D|d)(E|e)(B|b)(U|u)(G|g).*")
@@ -25,17 +22,9 @@ else()
     target_link_options(${PROJECT_NAME} PRIVATE -mwindows)
 endif()
 
-# 链接 imgui
-target_include_directories(${PROJECT_NAME} PRIVATE ../3rd/imgui/source/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE imgui)
-
-# 链接 util
-target_include_directories(${PROJECT_NAME} PRIVATE ../util/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE util)
-
-# 链接 rc
-target_include_directories(${PROJECT_NAME} PRIVATE rc/gen/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE rc)
+# 链接 appBase
+target_include_directories(${PROJECT_NAME} PRIVATE ../appBase/core/include)
+target_link_libraries(${PROJECT_NAME} PRIVATE appBase)
 
 # 链接 glm
 target_include_directories(${PROJECT_NAME} PRIVATE ../3rd/glm/glm)
