--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "appBase"]
 	path = appBase
-	url = https://gitee.com/xiaodouxd/xdwnd.git
+	url = https://github.com/XiaoDouXd/imgui-enc.git
 [submodule "3rd/glm"]
 	path = 3rd/glm
 	url = https://github.com/g-truc/glm.git
